# gnome-proton-drive

./: CLAUDE.md  Makefile  README.md  ROADMAP.md  proton-drive-setup
backend/: config.h  gvfsbackendproton.c  gvfsbackendproton.h  meson.build  meson_options.txt  proton-rpc.c  proton-rpc.h  proton.mount
backend/gvfs-headers/: daemon-main.h  gmountspec.h  gvfsbackend.h  gvfsdaemon.h  gvfsdaemonprotocol.h  gvfsdbus.h  gvfsjob.h  gvfsjobcloseread.h  gvfsjobclosewrite.h  gvfsjobdbus.h  gvfsjobenumerate.h  gvfsjobmount.h  gvfsjobopenforread.h  gvfsjobopenforwrite.h  gvfsjobqueryinfo.h  gvfsjobread.h  gvfsjobwrite.h  gvfstypes.h  gvfsutils.h
backend/tests/: meson.build  test-proton-rpc.c
docs/: caching.md  conflicts.md  reference.md  rpc-api.md  volume-monitor.md
helper/: go.mod  go.sum  main.go
helper/drive/: blockcache.go  blockcache_test.go  errors.go  events.go  events_test.go  metacache.go  metacache_test.go  mkdir_test.go  session.go  session_test.go  thumbnail.go  thumbnail_test.go  writefile_test.go
helper/rpc/: server.go  types.go
volume-monitor/: main.vala  meson.build  meson_options.txt  proton-account-watcher.vala  proton-remote-volume-monitor.vala  proton-volume.vala  proton.monitor.in
